# psychicstd

./: .cmake-format.py  .gersemirc  .gitignore  AGENTS.md  CLAUDE.md  CMakeLists.txt  README.md  compliance.md  run_ci_locally.sh  run_clang_format.sh  run_cmake_format.sh  run_markdown_format.sh  run_python_lint.sh  run_shell_format.sh  run_yaml_format.sh  speed.md  speed_macos.md  startup.md  startup_macos.md
.docker/: ci-gcc.dockerfile
.github/workflows/: cmake-single-platform.yml  compliance-main.yml  compliance-nightly.yml  compliance-pr.yml  compliance-sanitizers-pr.yml  compliance-sanitizers.yml  formatting.yml  main.yml  perf-pr.yml  realworld-perf-pr.yml  realworld.yml  sanitizers.yml
benchmarks/compile_time/: CMakeLists.txt  bench_all.cpp  bench_cstddef.cpp  bench_cstdint.cpp  bench_iostream.cpp  bench_numeric.cpp  bench_rapidjson.cpp  bench_wordcounter.cpp  run_bench.py
benchmarks/startup_time/: CMakeLists.txt  bench_startup.cpp  run_bench.py
casestudies/include_overhead/: includeoverheadcasestudy.md  run_experiment.py
casestudies/modules/: modulescasestudy.md  pch.h  run_experiment.py  tu_include.cpp  tu_mod.cpp
casestudies/precompiled_headers/: precompiledheaderscasestudy.md  run_experiment.py  tu.cpp
casestudies/std_string/: example.cpp  stdstringcasestudy.md
casestudies/std_vector/: example.cpp  measure.sh  stdvectorcasestudy.md
casestudies/string_completeness/: count_members.py  stringcompletenesscasestudy.md
casestudies/template_depth/: run_experiment.py  templatedepthcasestudy.md
cmake/: psychicstd-toolchain-project-include.cmake  psychicstd-toolchain-validate.cmake  psychicstd-toolchain.cmake
docs/: compiled-library.md  sanitizer-testing.md
include/: __psychicstd_abs  __psychicstd_algo  __psychicstd_algobase  __psychicstd_algoheap  __psychicstd_begin_end  __psychicstd_char_traits  __psychicstd_config  __psychicstd_contiguous_compare  __psychicstd_contiguous_iterator  __psychicstd_equal_to  __psychicstd_except  __psychicstd_exception_base  __psychicstd_functional_extra  __psychicstd_functors  __psychicstd_hash  __psychicstd_invoke  __psychicstd_iterator_core  __psychicstd_iterator_next  __psychicstd_minmax  __psychicstd_node_map  __psychicstd_ordering  __psychicstd_ostreambuf_iterator  __psychicstd_refcount  __psychicstd_string_algobase  __psychicstd_traits_core  algorithm  any  array  atomic  bit  bitset  cctype  cfenv  chrono  cinttypes  ciso646  clocale  cmath  compare  complex  (+66 more)
scripts/: compare_performance.py  compare_realworld.py  compare_realworld_performance.py  export-commits-sneakernet.sh  generate_realworld_reports.py  postFile.sh
src/: cerr.cpp  cin.cpp  clog.cpp  cout.cpp  ios.cpp  iostream.cpp  iostream_macos.cpp  istream.cpp  ostream.cpp  sstream_instantiations.cpp  stdexcept.cpp  stdio_streambuf.cpp  stdio_streambuf.h  string.cpp  string_instantiations.cpp  system_error.cpp
tests/: CMakeLists.txt  iostream_globals.cpp  psyassert.h  test_algorithm.cpp  test_any.cpp  test_array.cpp  test_atomic.cpp  test_bit.cpp  test_bitset.cpp  test_cassert.cpp  test_cctype.cpp  test_cerrno.cpp  test_cfenv.cpp  test_cfloat.cpp  test_chrono.cpp  test_cinttypes.cpp  test_ciso646.cpp  test_climits.cpp  test_clocale.cpp  test_cmath.cpp  test_compare.cpp  test_complex.cpp  test_concepts.cpp  test_condition_variable.cpp  test_csignal.cpp  test_cstdarg.cpp  test_cstddef.cpp  test_cstdint.cpp  test_cstdio.cpp  test_cstdlib.cpp  test_cstdlib_order.cpp  test_cstring.cpp  test_ctime.cpp  test_cwchar.cpp  test_deque.cpp  test_exception.cpp  test_filesystem.cpp  test_forward_list.cpp  test_fstream.cpp  test_functional.cpp  (+46 more)
tests/conan_project/: CMakeLists.txt  conanfile.py  main.cpp  psychic.profile  run.sh
tests/external_project/: CMakeLists.txt  main.cpp  project-include.cmake  run.sh
tools/: bench_diff.py  compliance.py  compliance_diff.py  compliance_sanitize_baseline.txt  libcxx_test.py
use_on_realworld_projects/: .gitignore  abseil_speed_report.md  benchmark_rdfind.sh  boost-asio_speed_report.md  catch2_speed_report.md  cmake_speed_report.md  cppcheck_speed_report.md  eigen_speed_report.md  fmt_speed_report.md  googletest_speed_report.md  nlohmann_speed_report.md  opencv_speed_report.md  rapidjson_speed_report.md  rdfind_speed_report.md  rdfind_speed_report_macos.md  realworld_projects.py  simdutf_speed_report.md  test_catch2.sh  test_cppcheck.sh  test_eigen.sh  test_fmt.sh  test_nlohmann.sh  test_rdfind.sh  test_simdutf.sh
validation/: CMakeLists.txt
validation/catch2/: CMakeLists.txt  test_algorithms.cpp  test_basic.cpp  test_strings.cpp
validation/eigen/: CMakeLists.txt  test_basic.cpp
validation/fmt/: CMakeLists.txt  test_format.cpp
validation/rapidjson/: CMakeLists.txt  test_dom.cpp  test_parse.cpp  test_write.cpp
