cmake_minimum_required(VERSION 3.20)
project(my_app LANGUAGES CXX)
file(WRITE "${CMAKE_BINARY_DIR}/.gitignore" "*\n")
add_executable(my_app main.cpp)
target_compile_options(my_app PRIVATE $<$<CXX_COMPILER_ID:Clang>:-Wno-atomic-alignment>)
if(CMAKE_CXX_COMPILER_ID MATCHES "Clang|GNU")
    target_compile_options(my_app PRIVATE -Wall -Wextra)
endif()
