cmake_minimum_required(VERSION 3.20)
project(my_app LANGUAGES CXX)
file(WRITE "${CMAKE_BINARY_DIR}/.gitignore" "*\n")

set(PSYCHICSTD_FETCHCONTENT_SOURCE "" CACHE PATH "Local psychicstd source for FetchContent")
if(PSYCHICSTD_FETCHCONTENT_SOURCE)
    include(FetchContent)
    FetchContent_Declare(psychicstd SOURCE_DIR "${PSYCHICSTD_FETCHCONTENT_SOURCE}")
    FetchContent_MakeAvailable(psychicstd)
    if(PSYCHICSTD_BUILD_TESTS OR PSYCHICSTD_BUILD_BENCHMARKS)
        message(FATAL_ERROR "psychicstd subproject tests and benchmarks must default to off")
    endif()
endif()

add_executable(my_app main.cpp)
if(PSYCHICSTD_FETCHCONTENT_SOURCE)
    target_link_libraries(my_app PRIVATE psychicstd::psychicstd)
endif()
if(CMAKE_CXX_COMPILER_ID MATCHES "Clang$")
    target_compile_options(my_app PRIVATE -Wno-atomic-alignment)
endif()
if(CMAKE_CXX_COMPILER_ID MATCHES "Clang|GNU")
    target_compile_options(my_app PRIVATE -Wall -Wextra)
endif()
